# eggsample

./: .gitignore  CMakeLists.txt  MODULE.bazel  README.md  WORKSPACE.bazel  bazel-bin  bazel-eggsample  bazel-out  bazel-testlogs  vcpkg.json
.github/workflows/: bazel.yml  cmake.yml
src/: BUILD  CMakeLists.txt  eggs.cc  eggs.h  eggs_test.cc  main.cc
